<resources>
    <string name="app_name">iWitness</string>
    <string name="home">Camera</string>
    <string name="iwitness_title">iWitness</string>
    <string name="add_more">Add More</string>
    <string name="settings">Settings</string>
    <string name="preferences">Preferences</string>
    <string name="cap_arm_iwitness">ARM IWITNESS</string>
    <string name="cap_or">OR</string>
    <string name="cap_rec">REC</string>
    <string name="events_history">Events History</string>
    <string name="event_playback">Event Playback</string>
    <string name="call_now">Call</string>
    <string name="call_911_now">%s Now</string>
    <string name="dashboard">Dashboard</string>
    <string name="exit">Exit</string>
    <string name="login">Login</string>
    <string name="videos">Videos</string>
    <string name="tips_tutorials">Tips/Tutorial</string>
    <string name="demo">Demo</string>
    <string name="Continue">Continue</string>
    <string name="register">Register</string>
    <string name="register_profile">Register Profile</string>
    <string name="share_with_friends">Share With Friends</string>
    <string name="SaveContinue"><![CDATA[Save & Continue]]></string>
    <string name="Skip">Skip</string>
    <string name="armed">Armed</string>
    <string name="tutorial">Tutorial</string>
    <string name="notifications_title">Notifications</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email</string>
    <string name="email_address_new">Email Address</string>
    <string name="email_optional">Email (Optional)</string>
    <string name="phone_number">Phone No</string>
    <string name="phone_number_new">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="profile">Profile</string>
    <string name="dismiss">Dismiss</string>
    <string name="fields_mandatory"> * All fields are mandatory.</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="SkipRegisterProfileConformation">Are you sure you want to skip this? Once you leave the app you won\'t
        be able to log-in and use iWitness as we need this basic information to set up your account
    </string>
    <string name="could_not_load_video_list">Could not load events at the moment. Please try again later.</string>
    <string name="recipient_name_required">Please enter the recipient\'s name before sending.</string>
    <string name="recipient_email_required">Please enter the recipient\'s email address before sending.</string>
    <string name="recipient_name_and_email_is_required">Please enter the recipient\'s name and email address before sending.</string>
    <string name="EmailPattern">^[_A-Za-z0-9-\\+]+(\\.[_A-Za-z0-9-]+)*@[A-Za-z0-9-]+(\\.[A-Za-z0-9]+)*(\\.[A-Za-z]{2,})$</string>
    <string name="phone_pattern">^(?:(?:\\+?1\\s*(?:[.-]\\s*)?)?(?:\\(\\s*([2-9]1[02-9]|[2-9][02-8]1|[2-9][02-8][02-9])\\s*\\)|([2-9]1[02-9]|[2-9][02-8]1|[2-9][02-8][02-9]))\\s*(?:[.-]\\s*)?)?([2-9]1[02-9]|[2-9][02-9]1|[2-9][02-9]{2})\\s*(?:[.-]\\s*)?([0-9]{4})(?:\\s*(?:#|x\\.?|ext\\.?|extension)\\s*(\\d+))?$</string>
    <string name="password_pattern">^.*(?=.{8,})(?=..*[0-9])(?=.*[a-z])(?=.*[A-Z]).*$</string>
    <string name="MultipleEmailPattern">^([_A-Za-z0-9-\\+]+(\\.[_A-Za-z0-9-]+)*@[A-Za-z0-9-]+(\\.[A-Za-z0-9]+)*(\\.[A-Za-z]{2,});?)+$</string>
    <string name="enter_required">Please enter required fields.</string>
    <string name="FirstNameRequired">First name is required</string>
    <string name="InvalidEmailAddress">Invalid Email Address</string>
    <string name="invalid_phone_number">Invalid mobile Number</string>
    <string name="unauthorized_access">Unauthorized access</string>
    <string name="invalid_password">Invalid password format. A valid password must be at least 8 characters, must contain at least one upper case, one lower case, and one number.</string>
    <string name="LastNameRequired">Last name is required</string>
    <string name="EmailRequired">Email is required</string>
    <string name="PhoneRequired">Mobile Number is required</string>
    <string name="PasswordRequired">Password is required</string>
    <string name="ConfirmPasswordNotMatch">Invalid new password. A valid password must be at least 8 characters, must contain at least one uppercase, one lowercase and one number.</string>
    <string name="CurrentPasswordNotMatch">Invalid current password. A valid password must be at least 8 characters, must contain at least one uppercase, one lowercase and one number.</string>
    <string name="ChangePassword"><u>Update password</u></string>
    <string name="current_new_passwordnotmatch">New password and confirm password does not match.</string>
    <string name="old_new_pwd_notsame">Old and New password should not be same.</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="RegisterProfile">Register Profile</string>
    <string name="PersonalizedMessage">Personalized message</string>
    <string name="InvitationMessage">Hi, \n\nI\'m using the iWitness app because I want to stay safe. I hope you\'ll
        check it out too.
    </string>
    <string name="address_1">ADDRESS</string>
    <string name="address_2">Address 2 (Optional)</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="state_select">Select State</string>
    <string name="send">Send</string>
    <string name="send_invitation">Share</string>
    <string name="additional_dist">Additional Distinguishing Features</string>
    <string name="Zipcode">Zip</string>
    <string name="country">Country</string>
    <string name="ChooseValue">Choose Value</string>
    <string name="Save">Save</string>
    <string name="RegisterEmergencyContacts">Register Emergency Contacts</string>
    <string name="skip_register_emergency_contacts">Are you sure you want to skip this step? If you are in danger no one
        will be alerted!
    </string>
    <string name="register_emergency_contacts_welcome_message">To get the most from iWitness, it\'s important that you
        add emergency contacts who you want to notified whenever you trigger a 911 call via iWitness. Listing all six
        possible contacts will increase the chances of someone noticing the alert and responding quickly.
    </string>
    <string name="register_address">Register Address</string>
    <string name="ok">Done</string>
    <string name="relationship">Relationship (Optional)</string>
    <string name="check_out_iwitness">Check out iWitness</string>
    <string name="send_invitaion_success">Invitation sent successfully</string>
    <string name="NewPasswordRequired">New Password is required</string>
    <string name="email_header">Email:</string>
    <string name="name_header">Name:</string>
    <string name="phone_header">Phone:</string>
    <string name="edit">Edit</string>
    <string name="height_and_weight_header">Height and Weight:</string>
    <string name="ethnicity_header">Ethnicity:</string>
    <string name="eye_color_header">Eye Color:</string>
    <string name="hair_color_header">Hair Color:</string>
    <string name="distinguishing_features_header">Distinguishing Features:</string>
    <string name="phone2_number">Phone 2</string>
    <string name="save">Save</string>
    <string name="edit_account">Edit Account</string>
    <string name="edit_address">Edit Address</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Update Password</string>
    <string name="distinguish">PERSONAL FEATURES</string>
    <string name="height_select">Select Height</string>
    <string name="height">Height</string>
    <string name="hint_height">Height</string>
    <string name="weight">Select Weight</string>
    <string name="hint_weight">Weight</string>
    <string name="birthdate">Birthdate</string>
    <string name="hint_birthdate">Date of Birth</string>
    <string name="eye_color">Select Eye Color</string>
    <string name="hint_eye_color">Eye Color</string>
    <string name="hair_color">Select Hair Color</string>
    <string name="hint_hair_color">Hair Color</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="ethnicity">Select Ethnicity</string>
    <string name="hint_ethnicity">Race/Ethnicity</string>
    <string name="gallery">Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="cap_cancel">CANCEL</string>
    <string name="camera">Camera</string>
    <string name="photo_library">Photo Library</string>
    <string name="select_picture">Select Picture</string>
    <string name="log_out">Log out</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <string name="phone">Mobile No</string>
    <string name="phone_no">Mobile Number</string>
    <string name="contact_not_found">Could not get contact\'s information. Please make sure this is not the imported
        contact from Facebook or other provider.
    </string>
    <string name="choose_contact">Choose Contact</string>
    <string name="short_phone_header">P:</string>
    <string name="short_email_header">E:</string>
    <string name="contacts">Contacts</string>
    <string name="emergency_contact_limit_reached">Cannot add more than 6 emergency contacts</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="confirm_delete">Are you sure you want to delete this contact from Emergency Contacts list?</string>
    <string name="update_address_success">Update address successful</string>
    <string name="register_emergency_contact_success">Register emergency contact successful</string>
    <string name="delete_contact_success">Delete contact successful</string>
    <string name="profile_settings">Settings</string>
    <string name="enable_torch">Camera Light</string>
    <string name="enable_shake_to_call_911">Shake to Call</string>
    <string name="enable_tap_to_call">Tap to Call</string>
    <string name="tap_or_shake_to_send_for_help">Tap or shake to send for help</string>
    <string name="tap_to_send_for_help">Tap to send for help</string>
    <string name="time_to_record_an_event">Time to record an event</string>
    <string name="off">OFF</string>
    <string name="share">Share</string>
    <string name="on">ON</string>
    <string name="min_recording_time_required">Please increase the recording time to at least 30 seconds.</string>
    <string name="end_tutorial">End Tutorial</string>
    <string name="cap_iwitness_is_now_armed">IWITNESS IS NOW ARMED</string>
    <string name="eye_color_label">Eye Color :</string>
    <string name="hair_color_label">Hair Color :</string>
    <string name="emergency_options">EMERGENCY OPTIONS</string>
    <string name="emergency_number">Emergency Number</string>
    <string name="record_time_titles">Recording Time Limit</string>
    <string name="signup">Sign Up</string>
    <string name="default_camera_options">DEFAULT CAMERA OPTIONS</string>
    <string name="default_record_options">DEFAULT RECORDING OPTIONS</string>
    <string name="automatic_call_emergency">Automatically call emergency phone number if phone is dropped or shaken
    </string>
    <string name="str_send">Send</string>
    <string name="str_recording_is_being_stored">Recording is being stored.</string>
    <string name="str_streaming_stopped">Streaming stopped</string>
    <string name="str_send_to_emergency_contact">Send to \n Emergency Contacts?</string>
    <string name="str_cancel">Cancel</string>
</resources>