<?xml version="1.0" encoding="utf-8"?>

<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ScrollView"
        android:background="@drawable/texture02_repeating"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:gravity="center"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">

        <EditText style="@style/EditText"
                  android:layout_gravity="center"
                  android:id="@+id/txtFirstName"
                  android:inputType="textPersonName|textNoSuggestions|textCapWords"
                  android:hint="@string/first_name">
            <requestFocus/>
        </EditText>

        <EditText style="@style/EditText"
                  android:layout_gravity="center"
                  android:layout_marginTop="15dp"
                  android:id="@+id/txtLastName"
                  android:inputType="textPersonName|textNoSuggestions|textCapWords"
                  android:hint="@string/last_name"/>

        <EditText style="@style/EditText"
                  android:layout_gravity="center"
                  android:layout_marginTop="15dp"
                  android:id="@+id/txtEmailAddress"
                  android:hint="@string/email_address"
                  android:inputType="textEmailAddress"/>

        <EditText style="@style/EditText"
                  android:layout_gravity="center"
                  android:layout_marginTop="15dp"
                  android:id="@+id/phoneEditText"
                  android:hint="@string/phone_number" android:inputType="phone"/>

        <EditText style="@style/EditText"
                  android:layout_gravity="center"
                  android:layout_marginTop="15dp"
                  android:id="@+id/txtPhoneAlt"
                  android:hint="@string/phone2_number" android:inputType="phone"/>

    </LinearLayout>
</ScrollView>