<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/texture02_repeating"
    android:orientation="vertical"
    android:layout_marginTop="?attr/actionBarSize">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/default_camera_options"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_top_bot"
        android:columnCount="2"
        android:rowCount="1">

        <TextView
            style="@style/TextView"
            android:layout_column="0"
            android:layout_gravity="center_vertical|left"
            android:layout_marginLeft="20dp"
            android:layout_row="0"
            android:text="@string/enable_torch" />

        <Switch
            android:id="@+id/swEnableTorch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="right"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:layout_row="0"
            android:textOff="@string/off"
            android:textOn="@string/on" />
    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/default_record_options"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_top_bot"
        android:columnCount="2"
        android:rowCount="1"
        android:visibility="visible">

        <TextView
            style="@style/TextView"
            android:layout_column="0"
            android:layout_gravity="center_vertical|left"
            android:layout_marginLeft="20dp"
            android:layout_row="0"
            android:text="@string/record_time_titles"
            android:visibility="visible" />

        <EditText
            android:id="@+id/txtRecordTime"
            style="@style/EditText"
            android:layout_width="150dp"
            android:layout_column="1"
            android:layout_margin="10dp"
            android:layout_row="0"
            android:background="@android:color/transparent"
            android:drawableRight="@drawable/down_arrow"
            android:focusable="false"
            android:gravity="right|center_vertical"
            android:layout_gravity="right"
            android:inputType="number"
            android:drawablePadding="10dp"
            android:text="00:00"
            android:visibility="visible" />

    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_bottom"
        android:columnCount="2"
        android:rowCount="1">

        <TextView
            android:id="@+id/tvEnabledTapToCall911"
            style="@style/TextView"
            android:layout_column="0"
            android:layout_gravity="center_vertical|left"
            android:layout_marginLeft="20dp"
            android:layout_row="0"
            android:text="@string/enable_tap_to_call" />

        <Switch
            android:id="@+id/swEnableTapToCall911"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="right"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:layout_row="0"
            android:textOff="@string/off"
            android:textOn="@string/on" />
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_bottom"
        android:columnCount="2"
        android:rowCount="1">

        <TextView
            android:id="@+id/tvEnabledShakeToCall911"
            style="@style/TextView"
            android:layout_column="0"
            android:layout_gravity="center_vertical|left"
            android:layout_marginLeft="20dp"
            android:layout_row="0"
            android:text="@string/enable_shake_to_call_911" />

        <Switch
            android:id="@+id/swEnableShakeToCall911"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="right"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:layout_row="0"
            android:textOff="@string/off"
            android:textOn="@string/on" />
    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/automatic_call_emergency"
        android:textColor="#777777"
        android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/emergency_options"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_top_bot"
        android:columnCount="2"
        android:rowCount="2">

        <TextView
            style="@style/TextView"
            android:layout_column="0"
            android:layout_gravity="center_vertical|left"
            android:layout_marginLeft="20dp"
            android:layout_row="0"
            android:text="@string/emergency_number" />

        <EditText
            android:id="@+id/txtEmergencyNumber"
            style="@style/EditText"
            android:layout_width="150dp"
            android:layout_column="1"
            android:layout_row="0"
            android:layout_margin="10dp"
            android:background="@android:color/transparent"
            android:drawableRight="@drawable/down_arrow"
            android:focusable="false"
            android:gravity="right|center_vertical"
            android:layout_gravity="right"
            android:inputType="number"
            android:drawablePadding="10dp"
            android:text="100" />
    </GridLayout>

</LinearLayout>